hphp/test/slow/ext_curl/pools_can_be_configured_independently.php.expectf
here

Fatal error: Uncaught exception 'RuntimeException' with message 'Timeout reached waiting for an available pooled curl connection!' in %s/hphp/test/slow/ext_curl/pools_can_be_configured_independently.php:6
Stack trace:
#0 {main}
